can't have non-tunes in Tunes

--- a/Binary/Apps/Makefile
+++ b/Binary/Apps/Makefile
@@ -1,7 +1,9 @@
 TOOLS = ../../Tools
-SUBDIRS = Tunes
 
 include $(TOOLS)/Makefile.inc
 
+all::
+	mkdir -p Tunes
+
 clean::
-	rm -f *.bin *.com *.img *.rom *.pdf *.log *.eeprom *.COM *.BIN
+	rm -f *.bin *.com *.img *.rom *.pdf *.log *.eeprom *.COM *.BIN Tunes/*
