--- a/Source/Makefile
+++ b/Source/Makefile
@@ -4,8 +4,9 @@
 NOTDONE = Doc
 SUBDIRS = Prop
 SUBDIRS += Apps 
-SUBDIRS += CBIOS HBIOS 
-SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS CPM3
+SUBDIRS += CBIOS
+SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS
+SUBDIRS += HBIOS CPM3
 SUBDIRS += ZPM3
 SUBDIRS += Forth
 NOTDONE += Fonts
