--- a/Source/Makefile
+++ b/Source/Makefile
@@ -5,11 +5,11 @@ NOTDONE = Doc
 SUBDIRS = Prop
 SUBDIRS += Apps 
 SUBDIRS += CBIOS
+SUBDIRS += Forth
+SUBDIRS += Fonts
 SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS
 SUBDIRS += HBIOS CPM3
 SUBDIRS += ZPM3
-SUBDIRS += Forth
-NOTDONE += Fonts
 SUBDIRS += BPBIOS
 SUBDIRS += Images
 TOOLS = ../Tools
