--- a/Source/Fonts/Makefile
+++ b/Source/Fonts/Makefile
@@ -2,9 +2,10 @@ OBJECTS = \
 	font8x8u.asm font8x11u.asm font8x16u.asm \
 	font8x8c.asm font8x11c.asm font8x16c.asm
 
+OTHERS = font8x8c.bin font8x11c.bin font8x16c.bin
+
 DEST = ../HBIOS
 TOOLS = ../../Tools
-OTHERS = *.rel
 
 include $(TOOLS)/Makefile.inc
 
@@ -13,6 +14,15 @@ include $(TOOLS)/Makefile.inc
 #
 %.rel: %.asm
 %.bin: %.asm
+
+font8x8c.bin: font8x8u.bin
+	$(BINDIR)/lzsa -f2 -r $< $@
+
+font8x11c.bin: font8x11u.bin
+	$(BINDIR)/lzsa -f2 -r $< $@
+
+font8x16c.bin: font8x16u.bin
+	$(BINDIR)/lzsa -f2 -r $< $@
 
 %.asm: %.bin
 	$(BINDIR)/bin2asm $< > $@
