--- a/Source/CPM3/Makefile
+++ b/Source/CPM3/Makefile
@@ -6,6 +6,7 @@
 #
 OBJECTS = cpmldr.com cpmldr.sys cpm3res cpm3bnk zpmbios3 cpm3.sys gencpm.dat
 OTHERS = cpmldr.rel biosldr.rel cpm3res.sys cpm3bnk.sys zpmbios3.spr loader.bin cpmldr.bin
+OTHERS += biosldrc.rel biosldrd.rel
 
 TOOLS = ../../Tools
 include $(TOOLS)/Makefile.inc
@@ -21,7 +22,7 @@ DEFCPM3 = bnk
 #DEFCPM3 = res
 
 clean:: biosclean
-	@rm -f bios3.spr bnkbios3.spr zpmbios3.spr cpmldr.com gencpm.dat options.lib
+	@rm -f bios3.spr bnkbios3.spr zpmbios3.spr cpmldr.com gencpm.dat options.lib ldropts.lib
 
 biosclean:
 	@rm -f $(BIOSOBJS)
