--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -1,25 +1,26 @@
 OBJECTS =
 
-ifeq (1,1)
-OBJECTS += DYNO_std.rom 
-OBJECTS += EZZ80_std.rom 
-OBJECTS += MK4_std.rom 
+ifeq (1,0)
+OBJECTS += DYNO_std.rom
+OBJECTS += EZZ80_std.rom
+OBJECTS += MK4_std.rom
 OBJECTS += N8_std.rom
-OBJECTS += RCZ180_ext.rom 
-OBJECTS += RCZ180_nat.rom 
+OBJECTS += RCZ180_ext.rom
+OBJECTS += RCZ180_nat.rom
 OBJECTS += RCZ80_kio.rom
-OBJECTS += RCZ80_mt.rom 
-OBJECTS += RCZ80_std.rom 
-OBJECTS += RCZ80_wiz.rom 
+OBJECTS += RCZ80_mt.rom
+OBJECTS += RCZ80_std.rom
+OBJECTS += RCZ80_wiz.rom
 OBJECTS += SBC_simh.rom
 OBJECTS += SBC_std.rom 
-OBJECTS += SCZ180_126.rom 
-OBJECTS += SCZ180_130.rom 
+OBJECTS += SCZ180_126.rom
+OBJECTS += SCZ180_130.rom
 OBJECTS += UNA_std.rom
 OBJECTS += ZETA_std.rom
-OBJECTS += ZETA2_std.rom 
+OBJECTS += ZETA2_std.rom
 else
-OBJECTS += ZETA2_std.rom 
+OBJECTS += ZETA_std.rom
+OBJECTS += ZETA2_std.rom
 endif
 
 MOREDIFF = camel80.bin game.bin hbios_rom.bin nascom.bin prefix.bin usrrom.bin \
