--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -4,11 +4,11 @@ ifeq (1,1)
 OBJECTS += DYNO_std.rom
 OBJECTS += EZZ80_std.rom
 OBJECTS += MK4_std.rom
-#OBJECTS += N8_std.rom
-#OBJECTS += RCZ180_ext.rom
-#OBJECTS += RCZ180_nat.rom
-#OBJECTS += RCZ80_kio.rom
-#OBJECTS += RCZ80_mt.rom
+OBJECTS += N8_std.rom
+OBJECTS += RCZ180_ext.rom
+OBJECTS += RCZ180_nat.rom
+OBJECTS += RCZ80_kio.rom
+OBJECTS += RCZ80_mt.rom
 #OBJECTS += RCZ80_std.rom
 #OBJECTS += RCZ80_wiz.rom
 #OBJECTS += SBC_simh.rom
