--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -10,7 +10,7 @@ OBJECTS += RCZ180_nat.rom
 #OBJECTS += RCZ80_kio.rom
 #OBJECTS += RCZ80_mt.rom
 OBJECTS += RCZ80_std.rom
-#OBJECTS += RCZ80_wiz.rom
+OBJECTS += RCZ80_wiz.rom
 OBJECTS += SBC_simh.rom
 OBJECTS += SBC_std.rom 
 OBJECTS += SCZ180_126.rom
