--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -1,25 +1,27 @@
-OBJECTS =
+ifndef ROM_CONFIG
+	ROM_CONFIG=std
+endif
 
-ifeq (1,1)
-OBJECTS += DYNO_std.rom DYNO_std.com
-OBJECTS += EZZ80_std.rom EZZ80_std.com
-OBJECTS += MK4_std.rom MK4_std.com
-OBJECTS += N8_std.rom N8_std.com
-OBJECTS += RCZ180_ext.rom RCZ180_ext.com
-OBJECTS += RCZ180_nat.rom RCZ180_nat.com
-OBJECTS += RCZ80_kio.rom RCZ80_kio.com
-OBJECTS += RCZ80_mt.rom RCZ80_mt.com
-OBJECTS += RCZ80_std.rom RCZ80_std.com
-OBJECTS += SBC_simh.rom SBC_simh.com
-OBJECTS += SBC_std.rom SBC_std.com 
-OBJECTS += SCZ180_126.rom SCZ180_126.com
-OBJECTS += SCZ180_130.rom SCZ180_130.com
-OBJECTS += SCZ180_131.rom SCZ180_131.com
-OBJECTS += UNA_std.rom
-OBJECTS += ZETA_std.rom ZETA_std.com
-OBJECTS += ZETA2_std.rom ZETA2_std.com
+ifdef ROM_PLATFORM
+	OBJECTS = ${ROM_PLATFORM}_${ROM_CONFIG}.rom ${ROM_PLATFORM}_${ROM_CONFIG}.com
 else
-OBJECTS += ZETA2_std.rom ZETA2_std.com
+	OBJECTS += DYNO_std.rom DYNO_std.com
+	OBJECTS += EZZ80_std.rom EZZ80_std.com
+	OBJECTS += MK4_std.rom MK4_std.com
+	OBJECTS += N8_std.rom N8_std.com
+	OBJECTS += RCZ180_ext.rom RCZ180_ext.com
+	OBJECTS += RCZ180_nat.rom RCZ180_nat.com
+	OBJECTS += RCZ80_kio.rom RCZ80_kio.com
+	OBJECTS += RCZ80_mt.rom RCZ80_mt.com
+	OBJECTS += RCZ80_std.rom RCZ80_std.com
+	OBJECTS += SBC_simh.rom SBC_simh.com
+	OBJECTS += SBC_std.rom SBC_std.com
+	OBJECTS += SCZ180_126.rom SCZ180_126.com
+	OBJECTS += SCZ180_130.rom SCZ180_130.com
+	OBJECTS += SCZ180_131.rom SCZ180_131.com
+	OBJECTS += UNA_std.rom
+	OBJECTS += ZETA_std.rom ZETA_std.com
+	OBJECTS += ZETA2_std.rom ZETA2_std.com
 endif
 
 MOREDIFF = camel80.bin game.bin hbios_rom.bin nascom.bin prefix.bin usrrom.bin \
@@ -27,7 +29,7 @@ MOREDIFF = camel80.bin game.bin hbios_rom.bin nascom.bin prefix.bin usrrom.bin \
 	eastaegg.bin hbios_img.bin imgpad.bin osimg.bin tastybasic.bin \
 	game.bin usrrom.bin
 
-SUBDIRS = 
+SUBDIRS =
 DEST = ../../Binary
 TOOLS =../../Tools
 OTHERS =  *.img *.rom *.com *.bin *.z80 cpm.sys zsys.sys Build.inc RomDisk.tmp font*.asm *.dat
