--- a/Source/CPM3/Makefile
+++ b/Source/CPM3/Makefile
@@ -11,8 +11,7 @@ OTHERS += biosldrc.rel biosldrd.rel
 TOOLS = ../../Tools
 include $(TOOLS)/Makefile.inc
 
-ZXINCDIR = ../
-export ZXINCDIR
+export ZXINCDIR = ../
 
 BIOSOBJS = bioskrnl.rel scb.rel boot.rel chario.rel 
 BIOSOBJS += move.rel drvtbl.rel diskio.rel util.rel
