Add SC131 Support
Also cleaned up some ReadMe files.

--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -17,6 +17,7 @@ OBJECTS += SCZ180_126.rom SCZ180_126.com
 OBJECTS += SCZ180_126_mtx.rom SCZ180_126_mtx.com
 OBJECTS += SCZ180_130.rom SCZ180_130.com
 OBJECTS += SCZ180_130_mtx.rom SCZ180_130_mtx.com
+OBJECTS += SCZ180_131.rom SCZ180_131.com
 OBJECTS += UNA_std.rom
 OBJECTS += ZETA_std.rom ZETA_std.com
 OBJECTS += ZETA2_std.rom ZETA2_std.com
