Added some more gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ Source/Images/blankhd
 Source/Prop/Spin/ParPortProp.list
 Source/Prop/Spin/PropIO.list
 Source/Prop/Spin/PropIO2.list
+Source/Prop/ParPortProp.list
+Source/Prop/PropIO.list
+Source/Prop/PropIO2.list
 Source/ZPM3/bnkbios3.spr
 Source/ZPM3/gencpm.com
 Source/ZPM3/gencpm.com
@@ -94,3 +97,6 @@ Source/ZPM3/gencpm.com
 Source/ZPM3/startzpm.com
 Source/ZPM3/zccp.com
 Source/ZPM3/zpmldr.com
+Source/ZPM3/genbnk.dat
+
+Source/ZSDOS/zsdos.err
