Experimental partition support

--- a/Source/Images/Makefile
+++ b/Source/Images/Makefile
@@ -1,26 +1,23 @@
 #
-# this makefile subsumes all the work done in Build.cmd, Build{Hd,Fd}.*
+# this makefile subsumes all the work done in Build.cmd, BuildDisk.cmd, BuildDisk.ps1
 #
 SYSTEMS = ../CPM22/cpm_wbw.sys ../ZSDOS/zsys_wbw.sys ../CPM3/cpmldr.sys
 
-FDIMGS = fd_cpm22.img fd_zsdos.img fd_nzcom.img \
-	fd_cpm3.img fd_zpm3.img fd_ws4.img
-FDBIN = fd_cpm22.bin fd_zsdos.bin fd_nzcom.bin \
-	fd_cpm3.bin fd_zpm3.bin fd_ws4.bin
+FDIMGS = fd144_cpm22.img fd144_zsdos.img fd144_nzcom.img \
+	fd144_cpm3.img fd144_zpm3.img fd144_ws4.img
 HDIMGS = hd_cpm22.img hd_zsdos.img hd_nzcom.img \
 	hd_cpm3.img hd_zpm3.img hd_ws4.img
-HDBIN = hd_cpm22.bin hd_zsdos.bin hd_nzcom.bin \
-	hd_cpm3.bin hd_zpm3.bin hd_ws4.bin
 # HDIMGS += hd_bp.img
-# HDBIN += hd_bp.bin
+HDNEWIMGS = hdnew_cpm22.img hdnew_zsdos.img hdnew_nzcom.img \
+	hdnew_cpm3.img hdnew_zpm3.img hdnew_ws4.img
+# HDNEWIMGS += hdnew_bp.img
 
-HDPREFIX = 			# Legacy
-#HDPREFIX = hd_prefix.dat	# New
+HDPREFIX =
+HDNEWPREFIX = hdnew_prefix.bin
 
-OBJECTS = $(FDIMGS) $(HDIMGS) hd_combo.img		# Legacy
-#OBJECTS = $(FDIMGS) $(HDIMGS) $(HDBIN) hd_combo.img	# New
+OBJECTS = $(FDIMGS) $(HDIMGS) hd_combo.img $(HDNEWIMGS) hdnew_combo.img
 
-OTHERS = blank144 blankhd $(FDBIN) $(HDBIN)
+OTHERS = blank144 blankhd blankhdnew
 
 DEST=../../Binary
 
@@ -29,7 +26,10 @@ include $(TOOLS)/Makefile.inc
 
 DIFFPATH = $(DIFFTO)/Binary
 
-hd_combo.img:	$(HDPREFIX) $(HDBIN)
+hd_combo.img:	$(HDPREFIX) $(HDIMGS)
+	cat $^ > $@
+
+hdnew_combo.img:	$(HDNEWPREFIX) $(HDNEWIMGS)
 	cat $^ > $@
 
 #
@@ -47,35 +47,32 @@ blank144:
 	@echo Making Blank Floppy of size $(FDSIZE)k
 	@LC_CTYPE=en_US.US-ASCII tr '\000' '\345' </dev/zero | dd of=$@ bs=1024 count=$(FDSIZE) 2>/dev/null
 
-HDSIZE := 8320		# Legacy
-#HDSIZE := 8192		# New
+HDSIZE := 8320
+HDNEWSIZE := 8192
 
 blankhd:
 	@echo Making Blank Hd of size $(HDSIZE)k
 	@LC_CTYPE=en_US.US-ASCII tr '\000' '\345' </dev/zero | dd of=$@ bs=1024 count=$(HDSIZE) 2>/dev/null
 	
-%.img: %.bin
-	@if echo $@ | grep -q ^f ; then \
-		cat $< > $@ ; \
-	else \
-		cat $(HDPREFIX) $< > $@ ; \
-	fi ; \
-
-%.bin: $(SYSTEMS) blank144 blankhd Makefile
+blankhdnew:
+	@echo Making Blank HdNew of size $(HDNEWSIZE)k
+	@LC_CTYPE=en_US.US-ASCII tr '\000' '\345' </dev/zero | dd of=$@ bs=1024 count=$(HDNEWSIZE) 2>/dev/null
+	
+%.img: $(SYSTEMS) blank144 blankhd blankhdnew Makefile
 	@sys= ; \
 	case $@ in \
 		(*cpm22*) sys=../CPM22/cpm_wbw.sys;; \
 		(*zsdos* | *nzcom*) sys=../ZSDOS/zsys_wbw.sys;; \
 		(*cpm3* | *zpm3*) sys=../CPM3/cpmldr.sys;; \
 	esac ; \
-	if echo $@ | grep -q ^f ; then \
-		fmt=wbw_fd144 ; type=fd_ ; proto=blank144 ; \
-		mid="MID\006" ; \
-	else \
-		#fmt=wbw_hd_new ; type=hd_ ; proto=blankhd ; \
-		#mid="MID\012" ; \
-		fmt=wbw_hd0 ; type=hd_ ; proto=blankhd ; \
-		mid="MID\004" ; \
+	if echo $@ | grep -q ^fd144_ ; then \
+		fmt=wbw_fd144 ; type=fd144_ ; proto=blank144 ; \
+	fi ; \
+	if echo $@ | grep -q ^hd_ ; then \
+		fmt=wbw_hd ; type=hd_ ; proto=blankhd ; \
+	fi ; \
+	if echo $@ | grep -q ^hdnew_ ; then \
+		fmt=wbw_hdnew ; type=hdnew_ ; proto=blankhdnew ; \
 	fi ; \
 	d=$$(echo $(basename $@) | sed s/$$type//) ; \
 	echo Generating $@ ; \
@@ -84,7 +81,7 @@ blankhd:
 		echo copying system $$sys to $@ ; \
 		$(BINDIR)/mkfs.cpm -f $$fmt -b $$sys $@ ; \
 	fi ; \
-	LC_CTYPE=en_US.US-ASCII echo $$mid | dd bs=1 count=4 seek=1410 conv=notrunc of=$@ ; \
+	# LC_CTYPE=en_US.US-ASCII echo $$mid | dd bs=1 count=4 seek=1410 conv=notrunc of=$@ ; \
 	for u in $$(seq 0 15) ; do \
 		dir=d_$$d/u$$u ; \
 		if [ -d $$dir ] ; then \
@@ -114,12 +111,16 @@ clean::
 	@rm -f *.ls
 
 imgdiff:
-	@for i in $(FDIMGS) $(HDIMGS) ; do \
+	@for i in $(FDIMGS) $(HDIMGS) $(HDNEWIMGS) ; do \
 		echo $$i ; \
-		if echo $$i | grep -q ^f ; then \
+		if echo $$i | grep -q ^fd144_ ; then \
 			fmt=wbw_fd144 ; \
-		else \
-			fmt=wbw_hd0_1024 ; \
+		fi ; \
+		if echo $$i | grep -q ^hd_ ; then \
+			fmt=wbw_hd ; \
+		fi ; \
+		if echo $$i | grep -q ^hdnew_ ; then \
+			fmt=wbw_hdnew ; \
 		fi ; \
 		$(BINDIR)/cpmls -i -f $$fmt $$i > $$i.ls ; \
 		$(BINDIR)/cpmls -i -f $$fmt $(DIFFPATH)/$$i > $$i.diff.ls ; \
