--- a/Source/Makefile
+++ b/Source/Makefile
@@ -9,7 +9,7 @@ SUBDIRS += Fonts
 SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS
 SUBDIRS += HBIOS CPM3
 SUBDIRS += ZPM3
-SUBDIRS += BPBIOS
+#SUBDIRS += BPBIOS
 SUBDIRS += Images
 TOOLS = ../Tools
 include $(TOOLS)/Makefile.inc
