--- a/Source/CPM3/Makefile
+++ b/Source/CPM3/Makefile
@@ -4,11 +4,19 @@
 #
 # it does this by overriding OBJECTS in an invoked sub-make
 #
-OBJECTS = cpmldr.com cpmldr.sys cpm3res cpm3bnk zpmbios3 cpm3.sys gencpm.dat
-OTHERS = cpmldr.rel biosldr.rel cpm3res.sys cpm3bnk.sys zpmbios3.spr loader.bin cpmldr.bin
+OBJECTS = cpmldr.com cpmldr.sys cpm3res.sys cpm3bnk.sys zpmbios3
+OBJECTS += ccp.com gencpm.com genres.dat genbnk.dat
+OBJECTS += bdos3.spr bnkbdos3.spr resbdos3.spr
+OBJECTS += readme.1st cpm3fix.pat cpm3.sys gencpm.dat
+NOCOPY = zpmbios3
+OTHERS = cpmldr.rel biosldr.rel cpm3res.sys cpm3bnk.sys loader.bin cpmldr.bin
 OTHERS += biosldrc.rel biosldrd.rel
+NODELETE = ccp.com gencpm.com genres.dat genbnk.dat bdos3.spr bnkbdos3.spr resbdos3.spr
+NODELETE += readme.1st cpm3fix.pat
 
+DEST = ../../Binary/CPM3
 TOOLS = ../../Tools
+
 include $(TOOLS)/Makefile.inc
 
 export ZXINCDIR = ../
@@ -25,11 +33,11 @@ DEFCPM3 = bnk
 
 clean:: biosclean
 	@rm -f bios3.spr bnkbios3.spr zpmbios3.spr cpmldr.com gencpm.dat options.lib ldropts.lib
-
+	
 biosclean:
 	@rm -f $(BIOSOBJS)
 
-cpm3res:
+cpm3res.sys:
 	make biosclean
 	cp optres.lib options.lib
 	cp genres.dat gencpm.dat
@@ -38,7 +46,7 @@ cpm3res:
 	mv cpm3.sys cpm3res.sys
 	rm gencpm.dat
 
-cpm3bnk:
+cpm3bnk.sys:
 	make biosclean
 	cp optbnk.lib options.lib
 	cp genbnk.dat gencpm.dat
@@ -50,9 +58,7 @@ cpm3bnk:
 zpmbios3:
 	make biosclean
 	cp optzpm.lib options.lib
-	cp genbnk.dat gencpm.dat
-	make OBJECTS=zpmbios3.spr
-	rm gencpm.dat
+	make OBJECTS=zpmbios3.spr DEST=
 
 cpmldr.bin:	biosldrd.rel cpmldr.rel
 	$(ZXCC) $(TOOLS)/cpm/bin/LINK -CPMLDRD[L100]=CPMLDR,BIOSLDRD
@@ -83,9 +89,12 @@ zpmbios3.spr: $(BIOSOBJS)
 
 cpm3.sys: cpm3$(DEFCPM3).sys
 	cp cpm3$(DEFCPM3).sys cpm3.sys
+	rm -f /tmp/casefn.cache
 
 gencpm.dat: gen$(DEFCPM3).dat
 	cp gen$(DEFCPM3).dat gencpm.dat
-
+	rm -f /tmp/casefn.cache
+	
 cpmldr.sys: loader.bin cpmldr.bin
 	cat loader.bin cpmldr.bin > $@
+
