--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -24,9 +24,43 @@ jobs:
           make
           make clean
           rm -rf .git*
-        
+      
+      - name: List Output
+        run: |
+          cd Binary
+          ls -l
+          find -type f -exec md5sum '{}' \;
+      
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
           name: RomWBW-${{env.GITHUB_REF_SLUG}}-${{env.GITHUB_SHA_SHORT}}
+          path: .
+
+  buildMacos:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Get OS info
+        run: |
+          system_profiler SPSoftwareDataType
+
+      - name: Build
+        run: |
+          make
+          make clean
+          rm -rf .git*
+
+      - name: List Output
+        run: |
+          cd Binary
+          ls -l
+          find . -type f -exec md5 -r -- '{}' +;
+        
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: RomWBW-macOS
           path: .
