Fix MacOS Build Again

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Build
         run: |
           make
+          make clean
           rm -rf .git*
 
       - name: List Output
