--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: rlespinasse/github-slug-action
+      - uses: rlespinasse/github-slug-action@v3
         
       - uses: actions/checkout@v2
           
