--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -20,6 +20,7 @@ jobs:
           
       - name: Build
         run: |
+          export TZ='America/Los_Angeles'
           sudo apt-get install libncurses-dev
           make
           make clean
