--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -9,7 +9,7 @@ on:
       - v*
 
 jobs:
-  build:
+  buildLinux:
 
     runs-on: ubuntu-latest
 
@@ -17,7 +17,7 @@ jobs:
       - uses: rlespinasse/github-slug-action@v3.x
         
       - uses: actions/checkout@v2
-          
+
       - name: Build
         run: |
           export TZ='America/Los_Angeles'
@@ -25,9 +25,39 @@ jobs:
           make
           make clean
           rm -rf .git*
-        
+
+      - name: List Output	
+        run: |	
+          cd Binary	
+          ls -l	
+          find -type f -exec md5sum '{}' \;	
+      	
+      - name: Upload Artifact	
+        uses: actions/upload-artifact@v1	
+        with:	
+          name: RomWBW_Linux-${{env.GITHUB_REF_SLUG}}-${{env.GITHUB_SHA_SHORT}}	
+          path: .	
+
+  buildMacOS:	
+    runs-on: macos-latest	
+
+    steps:	
+      - uses: actions/checkout@v2	
+
+      - name: Build	
+        run: |	
+          export TZ='America/Los_Angeles'	
+          make	
+          make clean	
+          rm -rf .git*	
+      - name: List Output	
+        run: |	
+          cd Binary	
+          ls -l	
+          find . -type f -exec md5 -r -- '{}' +;
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: RomWBW-${{env.GITHUB_REF_SLUG}}-${{env.GITHUB_SHA_SHORT}}
+          name: RomWBW_MacOS
           path: .
