--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -15,6 +15,7 @@ else
 	OBJECTS += RCZ280_ext.rom RCZ280_ext.com RCZ280_ext.upd
 	OBJECTS += RCZ280_nat.rom RCZ280_nat.com RCZ280_nat.upd
 	OBJECTS += RCZ280_nat_zz.rom RCZ280_nat_zz.com RCZ280_nat_zz.upd
+	OBJECTS += RCZ280_nat_zzr.rom RCZ280_nat_zzr.com RCZ280_nat_zzr.upd
 	OBJECTS += RCZ80_kio.rom RCZ80_kio.com RCZ80_kio.upd
 	OBJECTS += RCZ80_mt.rom RCZ80_mt.com RCZ80_mt.upd
 	OBJECTS += RCZ80_duart.rom RCZ80_duart.com RCZ80_duart.upd
@@ -53,6 +54,7 @@ DIFFPATH = $(DIFFTO)/Binary
 ROMSIZE=512
 
 N8_std.rom: ROMSIZE=512
+RCZ280_nat_zzr.rom: ROMSIZE=256
 
 %.rom:
 	bash Build.sh $(DIFFBUILD) $(shell echo $* | sed 's/_/ /') $(ROMSIZE)
