--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           export TZ='America/Los_Angeles'
           sudo apt-get install libncurses-dev
+          sudo apt-get install srecord
           make
           make clean
           rm -rf .git*
@@ -47,6 +48,7 @@ jobs:
       - name: Build
         run: |
           export TZ='America/Los_Angeles'
+          brew install srecord
           make
           make clean
           rm -rf .git*
